; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_cnic.c_cnic_bnx2x_iscsi_update.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_cnic.c_cnic_bnx2x_iscsi_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cnic_dev = type { %struct.cnic_local* }
%struct.cnic_local = type { i32 }
%struct.kwqe = type { i32 }
%struct.iscsi_kwqe_conn_update = type { i32 }
%union.l5cm_specific_data = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ISCSI_RAMROD_CMD_ID_UPDATE_CONN = common dso_local global i32 0, align 4
@ISCSI_CONNECTION_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cnic_dev*, %struct.kwqe*)* @cnic_bnx2x_iscsi_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cnic_bnx2x_iscsi_update(%struct.cnic_dev* %0, %struct.kwqe* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cnic_dev*, align 8
  %5 = alloca %struct.kwqe*, align 8
  %6 = alloca %struct.cnic_local*, align 8
  %7 = alloca %struct.iscsi_kwqe_conn_update*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %union.l5cm_specific_data, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.cnic_dev* %0, %struct.cnic_dev** %4, align 8
  store %struct.kwqe* %1, %struct.kwqe** %5, align 8
  %13 = load %struct.cnic_dev*, %struct.cnic_dev** %4, align 8
  %14 = getelementptr inbounds %struct.cnic_dev, %struct.cnic_dev* %13, i32 0, i32 0
  %15 = load %struct.cnic_local*, %struct.cnic_local** %14, align 8
  store %struct.cnic_local* %15, %struct.cnic_local** %6, align 8
  %16 = load %struct.kwqe*, %struct.kwqe** %5, align 8
  %17 = bitcast %struct.kwqe* %16 to %struct.iscsi_kwqe_conn_update*
  store %struct.iscsi_kwqe_conn_update* %17, %struct.iscsi_kwqe_conn_update** %7, align 8
  %18 = load %struct.iscsi_kwqe_conn_update*, %struct.iscsi_kwqe_conn_update** %7, align 8
  %19 = getelementptr inbounds %struct.iscsi_kwqe_conn_update, %struct.iscsi_kwqe_conn_update* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @BNX2X_SW_CID(i32 %20)
  store i32 %21, i32* %11, align 4
  %22 = load %struct.cnic_local*, %struct.cnic_local** %6, align 8
  %23 = load i32, i32* %11, align 4
  %24 = call i64 @cnic_get_l5_cid(%struct.cnic_local* %22, i32 %23, i32* %10)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %2
  %27 = load i32, i32* @EINVAL, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %50

29:                                               ; preds = %2
  %30 = load %struct.cnic_local*, %struct.cnic_local** %6, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call i8* @cnic_get_kwqe_16_data(%struct.cnic_local* %30, i32 %31, %union.l5cm_specific_data* %9)
  store i8* %32, i8** %8, align 8
  %33 = load i8*, i8** %8, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %38, label %35

35:                                               ; preds = %29
  %36 = load i32, i32* @ENOMEM, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %3, align 4
  br label %50

38:                                               ; preds = %29
  %39 = load i8*, i8** %8, align 8
  %40 = load %struct.kwqe*, %struct.kwqe** %5, align 8
  %41 = call i32 @memcpy(i8* %39, %struct.kwqe* %40, i32 4)
  %42 = load %struct.cnic_dev*, %struct.cnic_dev** %4, align 8
  %43 = load i32, i32* @ISCSI_RAMROD_CMD_ID_UPDATE_CONN, align 4
  %44 = load %struct.iscsi_kwqe_conn_update*, %struct.iscsi_kwqe_conn_update** %7, align 8
  %45 = getelementptr inbounds %struct.iscsi_kwqe_conn_update, %struct.iscsi_kwqe_conn_update* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = load i32, i32* @ISCSI_CONNECTION_TYPE, align 4
  %48 = call i32 @cnic_submit_kwqe_16(%struct.cnic_dev* %42, i32 %43, i32 %46, i32 %47, %union.l5cm_specific_data* %9)
  store i32 %48, i32* %12, align 4
  %49 = load i32, i32* %12, align 4
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %38, %35, %26
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @BNX2X_SW_CID(i32) #1

declare dso_local i64 @cnic_get_l5_cid(%struct.cnic_local*, i32, i32*) #1

declare dso_local i8* @cnic_get_kwqe_16_data(%struct.cnic_local*, i32, %union.l5cm_specific_data*) #1

declare dso_local i32 @memcpy(i8*, %struct.kwqe*, i32) #1

declare dso_local i32 @cnic_submit_kwqe_16(%struct.cnic_dev*, i32, i32, i32, %union.l5cm_specific_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
